# compiler-lab

./: Cargo.toml  README.md  grammar.json  test.lex
src/: args_reader.rs  main.rs  parser.rs  tokenizer.rs  translator.rs
src/parser/: action.rs  canonical_collection.rs  goto.rs  grammar.rs  lr1.rs  lr1_item.rs  lr1_item_set.rs  non_terminator.rs  parser_item.rs  production.rs
src/tokenizer/: position.rs  read_token_state.rs  token.rs  token_type.rs
src/tokenizer/read_token_state/: and.rs  bool.rs  breaks.rs  elses.rs  empty.rs  equal.rs  exclamation.rs  falses.rs  fors.rs  id.rs  ifs.rs  int_value.rs  ints.rs  less.rs  more.rs  or.rs  real.rs  real_value.rs  returns.rs  trues.rs  whiles.rs
src/translator/: attribute.rs  identifier.rs  quad.rs  symbol_table.rs  syntax.rs
