[package]
name = "compiler-lab"
version = "0.1.0"
authors = ["root <2108412077@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
serde = { version="1.0.125",features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33.3"